--- a/src/.env.stage.dev
+++ b/src/.env.stage.dev
@@ -1,2 +1,6 @@
-TEST_VALUE=hellofromdev
-TEST2_VALUE=hello
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_DATABASE=task-management
+JWT_SECRET=[j}Et7#a7mN`t&?wn]E{T3}M.]2Vgzw't/88xR!57{HA,./<mEuZ&Rg:3(&jAEZe
